--- a/light_integrity/manifest.json
+++ b/light_integrity/manifest.json
@@ -4,7 +4,9 @@
   "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/example_light/",
   "dependencies": [],
   "codeowners": [],
-  "requirements": [],
+  "requirements": [
+    "requests"
+  ],
   "iot_class": "local_polling",
-  "version": "0.2.1"
+  "version": "0.3.0"
 }
